--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,8 +16,8 @@
             <form>
                 <label for="name">Name: </label>
                 <input type="text" ng-model="peeps.newPerson.name" id="name" placeholder="Name" />
-                <label for="birthdate">DOB: </label>
-                <input type="date" ng-model="peeps.newPerson.birthDate" id="birthdate" />
+                <!-- <label for="birthdate">DOB: </label>
+                <input type="date" ng-model="peeps.newPerson.birthDate" id="birthdate" /> -->
                 <label for="location">Location: </label>
                 <input type="text" ng-model="peeps.newPerson.location" id="location" placeholder="Location" />
                 <button class="btn btn-info" ng-click="peeps.addPerson()">Add Person</button>
@@ -38,7 +38,7 @@
             <!-- <div ng-repeat="person in peeps.people | orderBy: 'name'" class="well col-md-3"> -->
               <div ng-repeat="person in peeps.people" class="well col-md-3">
                 <p>{{person.name}}</p>
-                <p>Born: {{person.birthDate | date}} in {{person.location}}</p>
+                <p>{{person.location}}</p>
                 <button ng-click="peeps.updatePerson(person._id)" class="btn btn-default">Update</button>
                 <button ng-click="peeps.deletePerson(person._id)" class="btn btn-danger">Delete</button>
             </div>
