--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,40 +1,66 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <title>Mongo Nice List!</title>
+    <title>Mongo / Mongoose</title>
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/controllers/people.controller.js"></script>
 
+    <link rel="stylesheet" href="/sytles/styles.css" />
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" />
+
 </head>
 <body ng-app="myApp">
-    <div class="container" ng-controller="PeopleController as peeps">
-        <h1>Mongo Nice List!</h1>
-        <div class="row">
-            <div class="col-md-12">
+<div class="container" ng-controller="PeopleController as peeps">
+    <h1 class='jumbotron'>Mongo / Mongoose</h1>
+    <div class="row">
+        <div class="col-md-12">
             <form>
                 <label for="name">Name: </label>
-                <input type="text" ng-model="peeps.newPerson.name" id="name" placeholder="Name" />
-                <label for="location">Location: </label>
-                <input type="text" ng-model="peeps.newPerson.location" id="location" placeholder="Location" />
-                <button class="btn btn-primary" ng-click="peeps.addPerson()">Add Person</button>
-            </form>
-            </div>
-        </div>
+                <input type="text" id="name" placeholder="Name"
+                       ng-model="peeps.newPerson.name" />
 
-        <div class="row">
-          <div class="col-md-12">
-              <div ng-repeat="person in peeps.people" class="well col-md-3">
-                <p>{{person.name}}</p>
-                <p>{{person.location}}</p>
+                <br / >
+                <label for="location">Location: </label>
+                <input type="text" id="location" placeholder="Location"
+                       ng-model="peeps.newPerson.location" />
+                <br />
+
+                <label for="birthdate">Birthdate: </label>
+                <input type="date" id="birthdate" placeholder="yyyy-mm-dd"
+                       ng-model="peeps.newPerson.birthDate" />
+
+                <br />
+                <label for="nicenessLevel">Niceness Level: </label>
+                <select ng-model="peeps.newPerson.nicenessLevel">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+
+                <br / >
+
+                <button class="btn" ng-click="peeps.addPerson()">Add Person</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div ng-repeat="person in peeps.people" class="well col-md-3">
+                <p>{{ person.name }}</p>
+                <p>{{ person.location }}</p>
+                <p>{{ person.birthDate }}</p>
+                <p>{{ person.nicenessLevel }}</p>
                 <button ng-click="peeps.updatePerson(person._id)" class="btn btn-default">Update</button>
                 <button ng-click="peeps.deletePerson(person._id)" class="btn btn-danger">Delete</button>
             </div>
-          </div>
         </div>
-
     </div>
+
+</div>
 
 </body>
 </html>
